# pulmoscan

./: .dockerignore  .env  .gitignore  Dockerfile  GEMINI.md  README.md  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  test_api.py  test_redis_cache.py
app/: config.py  database.py  main.py  models.py  schemas.py
app/api/: health.py  jobs.py
app/services/: cache.py  model.py  storage.py
app/utils/: hash_utils.py  image_utils.py
app/workers/: celery_app.py  tasks.py
scripts/: benchmark_performance.py  export_to_onnx.py  test_celery_batch_worker.py  test_celery_worker.py  test_csv_export.py  test_minio.py  test_onnx_inference.py  test_performance.py  test_redis_connection.py  test_zip_upload.py  train_covid_model.py
